--- a/BookClub/Views/Book/GetAllBooks.cshtml
+++ b/BookClub/Views/Book/GetAllBooks.cshtml
@@ -33,7 +33,7 @@
     @Html.TextBox("search")
     <input type="submit" name="submit" value="Search" />
 }
-<table class="table">
+<table class="table table-hover" id="allBookTable">
     <tr>
     <thead>
         <tr>
