--- a/BookClub/Views/Challenge/_ChallengeTable.cshtml
+++ b/BookClub/Views/Challenge/_ChallengeTable.cshtml
@@ -2,8 +2,8 @@
 
 <div id="progressBarComplete">
     <p>@(ViewBag.Percent)%</p>
-    <div class="progress">
-        <div class="progress-bar" role="progressbar"
+    <div class="progress progress-bar-info">
+        <div class="progress-bar progress-bar-striped active progress-bar-warning" role="progressbar"
              style="width:@(Html.AttributeEncode(ViewBag.Percent))%"></div>
     </div>
 </div>
@@ -59,7 +59,8 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "DeleteChallenge",
-               new { id = item.Id , Controller = "Challenge" })
+        new { id = item.Id , Controller = "Challenge" })
+                
             </td>
         </tr>
     }
