--- a/BookClub/Views/Challenge/_ChallengeTable.cshtml
+++ b/BookClub/Views/Challenge/_ChallengeTable.cshtml
@@ -14,20 +14,20 @@
             @Html.DisplayNameFor(model => model.Description)
         </th>
         @*<th>
-            @Html.DisplayNameFor(model => model.Completed)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.From)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Until)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Book.Title)
-        </th>*@
+                @Html.DisplayNameFor(model => model.Completed)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.From)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Until)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Book.Title)
+            </th>*@
         <th></th>
         <th></th>
-        
+
     </tr>
 
     @foreach (var item in Model)
@@ -48,23 +48,27 @@
                 @Html.CheckBoxFor(modelItem => item.Completed, new { id = item.Id, @class = "ActiveCheck" })
             </td>
             @*<td>
-                @Html.DisplayFor(modelItem => item.From)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Until)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Book.Title)
-            </td>*@
+                    @Html.DisplayFor(modelItem => item.From)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Until)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Book.Title)
+                </td>*@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "DeleteChallenge",
-        new { id = item.Id , Controller = "Challenge" })
-                
+                @*@Html.ActionLink("Delete", "DeleteChallenge",
+                    new { id = item.Id , Controller = "Challenge" })*@
+
+                <i class="glyphicon glyphicon-trash" onclick="location.href='@Url.Action("DeleteChallenge", "Challenge", new { id = item.Id })';return false;"/>
             </td>
         </tr>
     }
+    
 
 </table>
+
+
 
 <script src="~/Scripts/Custom_Scripts/CheckBoxListener.js"></script>
