--- a/BookClub/Views/Post/GetPost.cshtml
+++ b/BookClub/Views/Post/GetPost.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BookClub.Data.Models.Post
 
-<div class="containter body-content">
+<div class="containter body-content" id="allPostDiv">
     <div class="row postHeader">
         <div class="postHeading">
             <span class="postTitle">
@@ -46,11 +46,7 @@
 <div class="row" id="replyDivide"></div>
 @if(User.Identity.IsAuthenticated)
 {
-    @*using (Html.BeginForm("AddReply", "Admin", FormMethod.Post))
-    {
-        <input type="text" name="Reply" style="width:100%; height:100px; font-size:10px; margin-top:10px;"/>
-        <input type="submit" value="Reply to Post" class="btn btn-success" style="margin-top:10px;"/>
-    }*@
+
 <div class="row" id="postReplyRow">
     <span>
         @Html.ActionLink("Post reply", "AddReply_",
@@ -110,33 +106,4 @@
 </div>
 }
 </div>
-@*
-    <h1>@Model.Title</h1>
 
-
-    <div>
-        Author: @Model.ApplicationUser.UserName (@Model.ApplicationUser.Rating)
-        Created: @Model.Created
-
-    </div>
-
-    <div>
-        @Model.Content
-    </div>
-
-    @if (Model.Replies.Any())
-    {
-        foreach (var reply in Model.Replies)
-        {
-            <div>
-                <div>
-                    Reply Author: @reply.ApplicationUser.UserName
-                    Reply Created: @reply.Created
-                </div>
-                <div>
-                    Reply: @reply.Content
-                </div>
-            </div>
-        }
-    }
-*@
