altered ViewModels folders

--- a/BookClub/Content/styles/custom.css
+++ b/BookClub/Content/styles/custom.css
@@ -233,3 +233,10 @@ div.reviewHeader {
     background-color:white;
     color:green;
 }
+
+/*AddPost View*/
+b.discussionName {
+    color:aqua;
+    
+        
+}
