--- a/BookClub/Views/Review/GetReviewByBook.cshtml
+++ b/BookClub/Views/Review/GetReviewByBook.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BookClub.Models.Review.ReviewViewModel>
+﻿@model IEnumerable<BookClub.ViewModels.Review.ReviewViewModel>
 
 <div class="container-fluid">
     <div class="reviewHeader">
