--- a/BookClub/Views/Review/_ReviewContentPartial.cshtml
+++ b/BookClub/Views/Review/_ReviewContentPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookClub.Models.Review.ReviewViewModel
+﻿@model BookClub.ViewModels.Review.ReviewViewModel
 
 <div class="reviewContent">
 <table style="width: 100%; border: 1px solid black">
