--- a/BookClub/Views/Post/AddPost.cshtml
+++ b/BookClub/Views/Post/AddPost.cshtml
@@ -1,16 +1,16 @@
-﻿@model BookClub.Models.Post.NewPost
+﻿@model BookClub.ViewModels.Post.AddPostViewModel
 
 
 
 
-<h2>AddPost</h2>
+<h2><i>Add to:</i> <b class="discussionName">@Model.DicussionName</b> Discussion</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>NewPost</h4>
+        <h4>@Model.Title</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         
