--- a/BookClub/Views/Profile/Detail.cshtml
+++ b/BookClub/Views/Profile/Detail.cshtml
@@ -4,13 +4,34 @@
 
 <div class="container body-content">
     <div class="row sectionHeader">
-        <div class="sectionHeading">
+        <div class="profileSectionHeading">
             User Profile
         </div>
     </div>
-    
+
+    <div class="row userProfile">
+        <div class="col-md-4">
+            <div id="userProfileImage" style="background-image: url(@Model.ProfileImageUrl)"></div>
+            @if (User.Identity.Name == Model.Username)
+            {
+
+                @Html.ActionLink("Add Profile Image", "UploadFile", "Profile")
+
+                    @*<form method="post" enctype="multipart/form-data" asp-controller="Profile" asp-action="UploadProfileImage">
+                    <div id="upload">
+                        <label class="btn btn-default btn-file">
+                            Browse <input type="file" name="file" style="display: none" />
+                        </label>
+                    </div>
+                    <button type="submit" id="btn-profile" class="btn btn-default">Submit</button>
+                </form>*@
+
+                
+            }
+            </div>
+
         <div class="col-md-8">
-            <span id="username">@Model.Username</span>
+            <span id="userName">@Model.Username</span>
             @if (Model.IsAdmin)
             {
                 <span class="isAdmin">Admin</span>
@@ -22,5 +43,5 @@
             <span id="userEmail">Email: @Model.Email</span>
             <span id="userCreated">Member Since: @Model.MemberSince</span>
         </div>
+        </div>
     </div>
-</div>
