--- a/BookClub/Views/Challenge/_ChallengeTable.cshtml
+++ b/BookClub/Views/Challenge/_ChallengeTable.cshtml
@@ -1,15 +1,22 @@
 ﻿@model IEnumerable<BookClub.Data.Models.Challenges>
 
+<div class="container">
+    <div class="challengeHeader">
+        <div class="challengeHeading">
+            My Isolation Challenges
+        </div>
+    </div>
+
 <div id="progressBarComplete">
     <p>@(ViewBag.Percent)%</p>
     <div class="progress progress-bar-info">
-        <div class="progress-bar progress-bar-striped active progress-bar-warning" role="progressbar"
+        <div class="progress-bar progress-bar-striped active progress-bar-success" role="progressbar"
              style="width:@(Html.AttributeEncode(ViewBag.Percent))%"></div>
     </div>
 </div>
 
-<table class="table">
-    <tr>
+<table class="table table-hover" id="challengeTable">
+    <tr class="challengeList">
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
@@ -32,7 +39,7 @@
 
     @foreach (var item in Model)
     {
-        <tr>
+        <tr class="challengeListContent" rules="none">
             <td>
                 @if (!item.Completed)
                 {
@@ -69,6 +76,6 @@
 
 </table>
 
-
+    </div>
 
 <script src="~/Scripts/Custom_Scripts/CheckBoxListener.js"></script>
