Add home page with images, still need to complete CSS - sorted GetPost code

--- a/BookClub/Views/Home/Index.cshtml
+++ b/BookClub/Views/Home/Index.cshtml
@@ -1,31 +1,66 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿@*<div>
+    <h5 class="homeTitle">Welcome to MyBookPal - Bringing communities together line by line</h5>
+</div>*@
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col">
+        <!-- Wide card with share menu button -->
+        <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
+            <div class="mdl-card__title mdl-card--expand" id="bookShelf">
+                <h2 class="mdl-card__title-text homeLabel">BookShelf</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                Discover the world of books at the click of a buttion
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button">
+                    View Our BookShelf
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="mdl-cell mdl-cell--4-col">
+        <!-- Wide card with share menu button -->
+        <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
+            <div class="mdl-card__title mdl-card--expand" id="community">
+                <h2 class="mdl-card__title-text homeLabel">Community</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                Joing the latest discussions about the books you love.
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button">
+                    Join the conversation
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="mdl-cell mdl-cell--4-col">
+        <!-- Wide card with share menu button -->
+        <div class="demo-card-square mdl-card mdl-shadow--2dp" id="marginCard">
+            <div class="mdl-card__title mdl-card--expand" id="members">
+                <h2 class="mdl-card__title-text homeLabel">Members</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                See all our loyal book club members and become one today.
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button">
+                    View our members
+                </a>
+            </div>
+        </div>
+    </div>
+
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+
+    
+ 
