--- a/BookClub/Views/Reply/DeleteReply.cshtml
+++ b/BookClub/Views/Reply/DeleteReply.cshtml
@@ -29,11 +29,14 @@
 
     </dl>
 
-    @using (Html.BeginForm("DeleteReply", "Reply")){ @*FormMethod.Post, new { id = Model.Id })*@
+    @using (Html.BeginForm("DeleteReply", "Reply"))
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+
+            <input type="submit" value="Delete" class="btn btn-default" />
+            |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
