--- a/BookClub/Content/styles/custom.css
+++ b/BookClub/Content/styles/custom.css
@@ -1,4 +1,57 @@
-﻿
+﻿/*Home Index View*/
+@font-face{
+    font-family:'Libre Baskerville';
+    src: url('../images/fonts/LibreBaskerville-Bold.ttf');
+}
+
+.homeTitle{
+    color: #f2f2f2; 
+    background: #ff4a4a;
+    font-size: 20px;
+    line-height: 19px;
+    font-weight: 300;
+    margin: 0 5px 10px; 
+    float: left;
+    padding: 10px;
+    margin: 0 5px 10px;
+    font-family:'Libre Baskerville', serif;
+    
+
+}
+
+#marginCard{
+    margin-top: 60px;
+}
+
+.demo-card-square.mdl-card {
+    width: 300px;
+    height: 300px;
+}
+
+.demo-card-square > .mdl-card__title {
+    color: #fff;
+}
+.homeLabel {
+    background-color: rgba(0,0,0,0.3);
+    padding: 4px;
+}
+#bookShelf {
+    background-image: url('../images/home/bookShelf.jpg');
+    background-size:cover;
+}
+#community {
+    background-image: url('../images/home/community.jpg');
+    background-size: cover;
+}
+#members {
+    background-image: url('../images/home/members.jpg');
+    background-size: cover;
+    height: 147px;
+}
+
+
+
+
 /*GetBookId View*/
 #bookBlurb {
     font-size:18px;
