--- a/BookClub/Views/Post/GetPost.cshtml
+++ b/BookClub/Views/Post/GetPost.cshtml
@@ -6,14 +6,14 @@
     <div class="row postHeader">
         <div class="postHeading">
             <span class="postTitle">
-                @Model.Posts.PostTitle
+                @Model.PostTitle
             </span>
 
             <h4>
                 Go back to the
-                @Html.ActionLink(Model.Posts.DiscussionName, "GetPostsByDiscussion",
+                @Html.ActionLink(Model.DiscussionName, "GetPostsByDiscussion",
 
-             new { id = Model.Posts.DiscussionId , Controller = "Discussion" })
+             new { id = Model.DiscussionId , Controller = "Discussion" })
                 discussion
             </h4>
 
@@ -22,24 +22,24 @@
 
     <div class="row" id="postContent">
         <div class="col-md-3 postAuthorContainer">
-            @Html.ActionLink(Model.Posts.UserName, "Detail",
+            @Html.ActionLink(Model.UserName, "Detail",
 
-               new { id = Model.Posts.UserId, Controller = "Profile" })
+               new { id = Model.UserId, Controller = "Profile" })
 
-            <span class="postData">@Model.Posts.DatePosted</span>
+            <span class="postData">@Model.DatePosted</span>
         </div>
 
         <div class="col-md-9 postContentContainer">
             <div class="postContent">
-                @Html.Raw(Model.Posts.PostContent)
+                @Html.Raw(Model.PostContent)
             </div>
         </div>
 
         <div class="deletePost">
-            @if (Model.Posts.UserId == User.Identity.GetUserId())
+            @if (Model.UserId == User.Identity.GetUserId())
                 {
                     @Html.ActionLink("Delete", "DeletePost",
-                             new { id = Model.Posts.PostId, Controller = "Post" })
+                             new { id = Model.PostId, Controller = "Post" })
                 }
             </div>
     </div>
@@ -52,7 +52,7 @@
         <span>
             @Html.ActionLink("Post reply", "AddReply",
 
-      new { id = Model.Posts.PostId, Controller = "Reply" })
+      new { id = Model.PostId, Controller = "Reply" })
         </span>
         
     </div>
