Added edit function to Post

--- a/BookClub/Views/Discussion/GetPostsByDiscussion.cshtml
+++ b/BookClub/Views/Discussion/GetPostsByDiscussion.cshtml
@@ -109,7 +109,7 @@
                 Why not
 
                 @Html.ActionLink("Create", "AddPost",
-                 new { id = Model.Discussion.Id, Controller = "Admin" }, null)
+                 new { id = Model.Discussion.Id, Controller = "Post" }, null)
 
                 one?
             </h4>
