Added edit function to PostReply

--- a/BookClub/Views/Post/GetPost.cshtml
+++ b/BookClub/Views/Post/GetPost.cshtml
@@ -97,6 +97,11 @@
 
                       new { id = reply.Id , Controller = "Reply" })
                         </div>
+                        <div>
+                            @Html.ActionLink("Edit", "UpdateReply",
+
+                     new { id = reply.Id , Controller = "Reply" })
+                        </div>
                     </div>
                 }
 
