Admin can edit a Book

--- a/BookClub/Views/Book/GetBookId.cshtml
+++ b/BookClub/Views/Book/GetBookId.cshtml
@@ -37,6 +37,10 @@
                     <td class="bookLabel">Format: </td>
                     <td class="bookValue">@Model.Format </td>
                 </tr>
+                <tr>
+                    <td class="bookLabel">Year Published: </td>
+                    <td class="bookValue">@Model.Year </td>
+                </tr>
             </table>
         </div>
 
