--- a/BookClub/Views/Book/GetAllBooks.cshtml
+++ b/BookClub/Views/Book/GetAllBooks.cshtml
@@ -75,12 +75,11 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Genre.Name)
                         </td>
-                        @*<td>
-                            @using (Html.BeginForm("AddBookToFavourites", "Favourites", new { id = item.Id }, FormMethod.Post))
-                            {
-                            <button type="submit"><i class="fab fa-gratipay fa-2x"></i></button>
-                            }
-                        </td>*@
+                        <td>
+                            @Html.ActionLink("Edit", "UpdateBook",
+                                new { id = item.Id, Controller = "Admin" })
+                        </td>
+                            
                     </tr>
                 }
    
