--- a/BookClub/Views/Discussion/GetAllDiscussions.cshtml
+++ b/BookClub/Views/Discussion/GetAllDiscussions.cshtml
@@ -28,6 +28,16 @@
 
                          new { id = item.Id , Controller = "Book" })
                         </td>
+                        <td>
+                            <div>
+                            @Html.ActionLink("Edit", "UpdateDiscussion",
+                                     new { id = item.Id, Controller = "Admin" })
+                                </div>
+                            <div>
+                            @Html.ActionLink("Delete", "DeleteDiscussion",
+                                     new { id = item.Id, Controller = "Admin" })
+                                </div>
+                        </td>
                     </tr>
                 }
             </tbody>
