--- a/BookClub/Views/Shared/_Layout.cshtml
+++ b/BookClub/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 
                                 @if (this.User.IsInRole("Admin"))
                                 {
-                                <li>@Html.ActionLink("View all users", "GetAllUsers", "UserAdmin")</li>
+                                <li>@Html.ActionLink("View all users", "GetAllApplicationUsers", "UserAdmin")</li>
 
                             }
 
