Implemented 'AddDiscussion' and put icons in

--- a/BookClub/Content/styles/custom.css
+++ b/BookClub/Content/styles/custom.css
@@ -221,6 +221,15 @@ h4 {
     color: black;
     font-size: 1.2em;
 }
+.glyphicon-edit {
+    cursor:pointer;
+}
+.glyphicon-trash {
+    cursor: pointer;
+}
+
+
+
 
 /*Add Reply View*/
 
