--- a/BookClub/Views/Challenge/GetChallenges.cshtml
+++ b/BookClub/Views/Challenge/GetChallenges.cshtml
@@ -20,7 +20,7 @@
     {
         <div class="form-group">
             @Html.AntiForgeryToken()
-            <h3>Add Challenge</h3>
+            <p>Add Challenges</p>
             @*@Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div>
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
