--- a/BookClub/Views/Post/GetPost.cshtml
+++ b/BookClub/Views/Post/GetPost.cshtml
@@ -39,14 +39,8 @@
 
             @if (Model.UserId == User.Identity.GetUserId())
             {
-                <div>
-                @Html.ActionLink("Delete", "DeletePost",
-                         new { id = Model.PostId, Controller = "Post" })
-                    </div>
-                    <div>
-                @Html.ActionLink("Edit", "UpdatePost",
-                         new { id = Model.PostId, Controller = "Post" })
-                        </div>
+                <a><i class="glyphicon glyphicon-edit" onclick="location.href='@Url.Action("UpdatePost", "Post", new { id = Model.PostId })'"></i></a>
+                <a><i class="glyphicon glyphicon-trash" onclick="location.href='@Url.Action("DeletePost", "Post", new { id = Model.PostId })'"></i></a>
             }
         </div>
 
@@ -92,16 +86,10 @@
                 @if (reply.ReplyUserId == User.Identity.GetUserId())
                 {
                     <div class="row" id="deleteReplyRow">
-                        <div>
-                            @Html.ActionLink("Delete", "DeleteReply",
-
-                      new { id = reply.Id , Controller = "Reply" })
-                        </div>
-                        <div>
-                            @Html.ActionLink("Edit", "UpdateReply",
-
-                     new { id = reply.Id , Controller = "Reply" })
-                        </div>
+                        
+                        <a><i class="glyphicon glyphicon-edit" onclick="location.href='@Url.Action("UpdateReply", "Reply", new { id = reply.Id })'"></i></a>
+                        <a><i class="glyphicon glyphicon-trash" onclick="location.href='@Url.Action("DeleteReply", "Reply", new { id = reply.Id })'"></i></a>
+                                
                     </div>
                 }
 
