--- a/BookClub/Views/Reply/AddReply.cshtml
+++ b/BookClub/Views/Reply/AddReply.cshtml
@@ -3,37 +3,47 @@
 
 <h2>Replying to: @Model.PostTitle</h2>
 
-<div class="postreplyformContainer">
-    <div class="row replypostformContent">
-        @Model.PostContent
-    </div>
-</div>
+<div class="containter body-content">
+    <div class="row postHeader">
+        <div class="postHeading">
+            <span class="postTitle">
+                @Model.PostTitle
+            </span>
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>NewPostReply</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.ReplyContent, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10" id="replyTextArea">
-                @Html.TextAreaFor(model => model.ReplyContent, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ReplyContent, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
     </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+            <div class="col-md-9 postContentContainer">
+                <div class="postContent">
+                    @Html.Raw(Model.PostContent)
+                </div>
+            </div>
+    </div>
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-horizontal">
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.ReplyContent, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10" id="replyTextArea">
+                            @Html.TextAreaFor(model => model.ReplyContent, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.ReplyContent, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Create" class="btn btn-default" />
+                        </div>
+                    </div>
+                </div>
+            }
+
+            <div>
+                @Html.ActionLink("Back to List", "Index")
+            </div>
